# openkos

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_proposal.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  brand.md  cli.md  faq.md  glossary.md  knowledge-object-model.md  okf-alignment.md  philosophy.md  roadmap.md  tech_stack.md  testing.md  user-journey.md  vision.md
docs/adr/: 0001-default-extraction-model.md  0002-reversible-merge-ledger.md  0003-sensitivity-high-water-mark.md  0004-typed-relationships-frontmatter.md  0005-merge-edge-rewiring.md  0006-default-embedding-model.md  0007-volatility-taxonomy.md  README.md  template.md
evals/model_spike/: .gitignore  README.md  report.md  run_spike.py
examples/: README.md
examples/good-life-demo/: openkos.yaml
examples/good-life-demo/bundle/: index.md  log.md
examples/good-life-demo/raw/: call-with-maria-2026-07-14.txt  notes-on-the-enchiridion-2026-07-05.txt
examples/vector-db-demo/: AGENTS.md  index.md  log.md  openkos.yaml
examples/vector-db-demo/concepts/: pgvector.md  qdrant.md
examples/vector-db-demo/decisions/: adopt-pgvector.md
examples/vector-db-demo/people/: sarah-chen.md
examples/vector-db-demo/raw/: call-with-maria-2026-07-10.txt  standup-2026-07-14.txt
examples/vector-db-demo/sources/: standup-2026-07-14.md
openspec/: config.yaml
openspec/changes/add-doctor-command/: design.md  proposal.md  tasks.md
openspec/changes/add-forget-command/: tasks.md
openspec/changes/add-fts-state/: design.md
openspec/changes/add-ingest-command/: apply-progress.md  design.md  proposal.md  tasks.md
openspec/changes/add-init-command/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/add-lint-command/: design.md  verify-report.md
openspec/changes/add-model-selection/: proposal.md  tasks.md
openspec/changes/add-ollama-client/: proposal.md  tasks.md
openspec/changes/add-query-answer/: tasks.md
openspec/changes/add-query-command/: tasks.md
openspec/changes/add-status-command/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/directory-walk-observability/: design.md  proposal.md  tasks.md
openspec/changes/embedding-model-tag/: design.md  proposal.md
openspec/changes/embedding-vector-store/: proposal.md
openspec/changes/embedding-vector-store-2b/: proposal.md  tasks.md
openspec/changes/entity-resolution-adjudication/: design.md  proposal.md  tasks.md
openspec/changes/entity-resolution-candidates/: tasks.md
openspec/changes/entity-resolution-merge/: design.md  proposal.md  tasks.md
openspec/changes/freshness-contradiction-detection/: design.md  proposal.md
openspec/changes/freshness-lint-v1/: design.md  tasks.md
openspec/changes/freshness-reconcile/: proposal.md  tasks.md
openspec/changes/freshness-suggest-windows/: design.md  tasks.md
openspec/changes/graph-augmented-retrieval/: design.md  proposal.md
openspec/changes/graph-projection/: design.md  proposal.md  tasks.md
openspec/changes/harden-init-workspace/: apply-progress.md
openspec/changes/hybrid-retrieval/: design.md  exploration.md  tasks.md
openspec/changes/hybrid-retrieval-fusion/: design.md  proposal.md  tasks.md
openspec/changes/improve-forget-init-ux/: design.md  proposal.md
openspec/changes/improve-ollama-onboarding/: design.md  tasks.md
openspec/changes/ingest-source-body/: design.md  proposal.md  tasks.md
openspec/changes/llm-edge-production/: design.md  proposal.md  tasks.md
openspec/changes/merge-edge-rewiring/: design.md  proposal.md  tasks.md
openspec/changes/performance-caching/: proposal.md  tasks.md
openspec/changes/privacy-purge/: design.md  proposal.md  tasks.md
openspec/changes/privacy-purge-history-scrub/: tasks.md
openspec/changes/proactive-ollama-onboarding/: design.md  proposal.md  tasks.md
openspec/changes/reference-aware-forget/: design.md
openspec/changes/reference-aware-forget-cascade/: design.md  proposal.md  tasks.md
openspec/changes/reindex-embedding-resilience/: design.md  tasks.md
openspec/changes/reindex-lock-handling/: design.md  proposal.md  tasks.md
openspec/changes/reindex-summary-embed-failed/: design.md
openspec/changes/sensitivity-fail-closed-filter/: design.md  tasks.md
openspec/changes/status-aware-retrieval/: tasks.md
openspec/changes/two-output-rule/: design.md  tasks.md
openspec/changes/typed-relationships/: tasks.md
openspec/specs/concept-volatility/: spec.md
openspec/specs/derived-index-cache/: spec.md
openspec/specs/doctor-command/: spec.md
openspec/specs/entity-resolution/: spec.md
openspec/specs/entity-resolution-adjudication/: spec.md
openspec/specs/entity-resolution-merge/: spec.md
openspec/specs/forget-command/: spec.md
openspec/specs/fts-state/: spec.md
openspec/specs/graph-projection/: spec.md
openspec/specs/ingestion/: spec.md
openspec/specs/lint/: spec.md
openspec/specs/llm-client/: spec.md
openspec/specs/llm-edge-production/: spec.md
openspec/specs/privacy-purge/: spec.md
openspec/specs/query-answer/: spec.md
openspec/specs/query-command/: spec.md
openspec/specs/reindex-command/: spec.md
openspec/specs/retrieval-fusion/: spec.md
openspec/specs/sensitivity-aware-llm/: spec.md
openspec/specs/status/: spec.md
openspec/specs/vector-store/: spec.md
openspec/specs/workspace-init/: spec.md
src/openkos/: __init__.py  config.py  fsio.py  lifecycle.py  lint.py  sensitivity.py
src/openkos/bundle/: __init__.py  bundle.py  index.py  links.py  log.py  merge.py  provenance.py  references.py  relations.py
src/openkos/cli/: __init__.py  main.py  observability.py
src/openkos/extraction/: __init__.py  concept.py
src/openkos/graph/: __init__.py  (+3 more)
tests/unit/: conftest.py  test_config.py  test_fsio.py  test_lifecycle.py  test_lint.py  test_main.py  test_sensitivity.py
(+311 files in other folders)
