[project]
name = "openkos"
version = "0.1.1"
description = "Local-first engine that turns your scattered text into a living, portable knowledge base in the Open Knowledge Format (OKF)"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Jason", email = "jasonssdev@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
    "okf",
    "open-knowledge-format",
    "knowledge-base",
    "knowledge-graph",
    "local-first",
    "rag",
    "llm",
    "second-brain",
    "cli",
]
# The `License ::` trove classifier is deliberately omitted: `license` above is
# an SPDX expression (PEP 639), and declaring the license twice makes modern
# build backends warn or fail. The SPDX string is the single source of truth.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "networkx>=3.4",
    "python-frontmatter>=1.3.0",
    "pyyaml>=6.0.3",
    "scipy>=1.14",
    "sqlite-vec>=0.1.6",
    "typer>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/jasonssdev/openkos"
Repository = "https://github.com/jasonssdev/openkos"
Issues = "https://github.com/jasonssdev/openkos/issues"
Changelog = "https://github.com/jasonssdev/openkos/blob/main/CHANGELOG.md"

[project.scripts]
openkos = "openkos.cli.main:app"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "git-filter-repo>=2.47.0",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruamel-yaml>=0.19.1",
    "ruff>=0.15.21",
    "types-networkx>=3.6.1.20260624",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

# Coverage is opt-in: `--cov` is deliberately not in pytest's addopts, so plain
# `uv run pytest` stays fast for the local loop. CI passes `--cov`, and because
# the gate lives here, a local `uv run pytest --cov` gates identically to CI.
[tool.coverage.run]
source = ["openkos"]
# Line coverage alone lets an `if` that never goes both ways read as covered;
# branch coverage counts each direction.
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true

# Ruff infers `target-version` from `project.requires-python` (3.12) and
# defaults `line-length` to 88; neither is restated here. The formatter runs on
# defaults, so there is no [tool.ruff.format] section.

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes: undefined names, unused imports
    "I",   # isort: deterministic import order, keeps the layering rule auditable
    "UP",  # pyupgrade: the 3.12 floor means no back-compat idioms are needed
    "B",   # bugbear: mutable defaults, `raise ... from`, unstrict `zip`
    "SIM", # flake8-simplify
    "S",   # bandit: untrusted user text, YAML frontmatter, git subprocess
    "DTZ", # naive datetimes would corrupt OKF `as of` / freshness stamps
    "PT",  # flake8-pytest-style: tests are a first-class quality gate
    "PTH", # pathlib: the engine is filesystem-centric and must stay portable
    "RUF", # Ruff-specific, incl. RUF100 (unused noqa) to keep suppressions honest
]
ignore = [
    "E501", # line length is the formatter's job; E501 only fights it on long strings/URLs
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # `assert` is what a test is made of
]

[tool.ruff.lint.flake8-bugbear]
# `typer.Argument(...)`/`typer.Option(...)` in a parameter default is the
# idiomatic Typer CLI pattern (B008 normally flags a mutable default called
# at definition time), and both are effectively immutable declarative
# markers, not runtime state. `bool`/`str | None`-annotated parameters are
# already exempt by B008's own immutable-type check; `Path`-annotated ones
# (e.g. `ingest`'s `src` argument) are not, so both callables are listed
# explicitly here for consistency across every future Typer command.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
# Pin the analysis target to the declared floor so a contributor on a newer
# interpreter cannot merge code that is broken on 3.12.
python_version = "3.12"
files = ["src", "tests"]
strict = true
# Not implied by `strict`: dead code left by a wrong narrowing is a real bug,
# and `py.typed` means our type errors become our consumers' type errors.
warn_unreachable = true
enable_error_code = [
    "ignore-without-code", # a bare `# type: ignore` silences more than it claims
    "redundant-expr",
    "truthy-bool",       # catches `if obj:` on an always-truthy object
    "possibly-undefined",
]

# `sqlite-vec` ships no type stubs; this keeps `mypy . --strict` (repo-wide,
# incl. tests) green without weakening `strict` for the rest of the codebase.
[[tool.mypy.overrides]]
module = "sqlite_vec.*"
ignore_missing_imports = true
